# amqpcpp

./: .gitignore  CMakeLists.txt  Makefile  README  conanfile.py
include/: AMQPcpp.h
src/: AMQP.cpp
